--- a/src/styles/css/layout.css
+++ b/src/styles/css/layout.css
@@ -6715,6 +6715,7 @@ a[href='none'] {
 .modal_content {
   position: relative;
   z-index: 99999;
+  width: 100%;
   background-image: -webkit-gradient(
     linear,
     left top,
@@ -6754,7 +6755,7 @@ a[href='none'] {
   opacity: 0;
 }
 .modal_head {
-  padding: 16px 30px;
+  padding: 12px 16px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-size: 125%;
@@ -6765,6 +6766,11 @@ a[href='none'] {
   flex-shrink: 0;
   background-color: rgba(255, 255, 255, 0.05);
   position: relative;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .modal_head {
+    padding: 16px 30px;
+  }
 }
 .modal_head .btn_close {
   background-image: url(/images/icon/icon_close.png);
@@ -6783,7 +6789,12 @@ a[href='none'] {
   -ms-flex-positive: 1;
   flex-grow: 1;
   overflow: hidden;
-  padding: 20px 30px;
+  padding: 16px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .modal_body {
+    padding: 20px 30px;
+  }
 }
 .modal_body .scrollbar {
   height: 100%;
@@ -6805,14 +6816,16 @@ a[href='none'] {
   position: absolute;
   content: '';
   z-index: -1;
-  border-top: 20px solid transparent;
-  border-bottom: 20px solid transparent;
+  border-top: 19px solid transparent;
+  border-bottom: 19px solid transparent;
   right: 0;
-  border-left: 20px solid rgba(255, 255, 255, 0.1);
+  border-left: 19px solid rgba(255, 255, 255, 0.1);
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
   transform: translateX(100%);
   top: 0;
+  bottom: 0;
+  margin: auto;
 }
 .modal.show {
   opacity: 1;
@@ -6827,6 +6840,146 @@ a[href='none'] {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
+}
+.viewed_stars {
+  color: #555;
+  font-size: 24px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .viewed_stars {
+    font-size: 28px;
+  }
+}
+.viewed_stars__orange {
+  color: #ffaa00;
+}
+.viewed_stars .half {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  position: relative;
+  color: #555;
+}
+.viewed_stars .half > div:first-child {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 50%;
+  z-index: 1;
+  color: #ffaa00;
+}
+.table_tr + .table_tr {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+.table_td {
+  background-color: rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 140px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_td {
+    width: 220px;
+  }
+}
+.table_dd {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 1023px) and (orientation: landscape),
+  (min-width: 320px) and (orientation: portrait) {
+  .table_dd {
+    font-size: 14px !important;
+    line-height: 20px !important;
+  }
+}
+.table_dd,
+.table_td {
+  padding: 4px 12px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_dd,
+  .table_td {
+    padding: 12px 16px;
+  }
+}
+@media (max-width: 1023px) and (orientation: landscape),
+  (min-width: 320px) and (orientation: portrait) {
+  .table_quality .tables {
+    font-size: 12px;
+    line-height: 18px;
+  }
+}
+.table_quality .tables_head {
+  font-weight: 500;
+  background-color: rgba(46, 83, 129, 0.4);
+}
+.table_quality .tables_head,
+.table_quality .tables_tr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.table_quality .tables_head .tables_td,
+.table_quality .tables_tr .tables_td {
+  padding: 6px 12px;
+}
+.table_quality .tables_td:first-child {
+  width: 40px;
+  text-align: center;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_quality .tables_td:first-child {
+    width: 60px;
+  }
+}
+.table_quality .tables_td:nth-child(2) {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  width: 120px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_quality .tables_td:nth-child(2) {
+    width: 200px;
+  }
+}
+.table_quality .tables_td:nth-child(3) {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  width: 150px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_quality .tables_td:nth-child(3) {
+    width: 250px;
+  }
+}
+.table_quality .tables_td:nth-child(4) {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+.table_quality .tables_tr:nth-child(2n) {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.table_quality .list_poker .item .wrap {
+  display: inline-block;
+  -webkit-box-shadow: -2px 4px 6px 4px rgba(0, 0, 0, 0.5019607843);
+  box-shadow: -2px 4px 6px 4px rgba(0, 0, 0, 0.5019607843);
+  border-radius: 3px;
+}
+.table_quality .list_poker .item .wrap img {
+  height: 36px;
+}
+@media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
+  .table_quality .list_poker .item .wrap img {
+    height: 50px;
+  }
 }
 .accordion-button {
   cursor: pointer;
