--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,27 +1,4 @@
-.st0 {
-  opacity: 0.3;
-}
-.st1 {
-  enable-background: new;
-}
-.st2 {
-  fill: #ffd10a;
-}
-.st3 {
-  fill: #ffcb05;
-}
-.st4 {
-  fill: #ed9b21;
-}
-.st5 {
-  fill: #d6ede9;
-}
-.st6 {
-  fill: #b4b4b4;
-}
-.st7 {
-  fill: #e8a075;
-}
-.st8 {
-  fill: #a37456;
+.disable-infinity-animation {
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
